assets/src/scss/5-pages/_search.scss
.search-result {
    em {
        background: #ffff00;
    }

    .title {
      margin-right: 1rem;
    }

    h3, p {
        width: 100%;
        max-width: 100%;
    }

    .label {
      text-decoration: none;
      font-size: $font-size-base;
      font-weight: normal;
    }
}

#search-resultbox {
  position: absolute;
  @include rem(width, 255px);
  @include rem(min-height, 150px);
  z-index: 1000;

  border: solid 1px #cccccc;
  border-top: none;
  background: #fff;
  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.05);

  display: none;
  width: 100% !important;
  max-width: 90%;
  @media (min-width: 768px) {
    max-width: 350px;
  }

  @media (min-width: 1100px) and (max-width: 1400px)  {
    max-width: 270px;
  }
  
  @media (min-width: 1401px) {
    max-width: 350px;
  }

  .result-head {
    margin: 0;
    @include rem(padding, 0px 5px);
    font-weight: bold;
    border-top: solid 1px #CCCCCC;
    border-bottom: solid 1px #CCCCCC;

    .search-limit {
      font-weight: normal;
      float: right;
    }
  }

  ul {
    padding: 0;
    margin: 0;

    list-style: none;

    @include rem(max-height, 300px);
    overflow-y: auto;

    li {
      display: block;
      padding: 0;
      margin: 0;
      width: 100%;

      a, p {
        display: inline-block;
        margin: 0;
        @include rem(padding, 5px 5px 5px 15px);
        width: 100%;

        span.result-annotation {
          float: right;
        }
      }

      a:hover, a.selected {
        background: $yii-blue;
        color: #fff;
      }
    }
  }
}

